fix: show plus button when timeline is visible

--- a/src/components/OrdersMap/OrdersMap.module.scss
+++ b/src/components/OrdersMap/OrdersMap.module.scss
@@ -126,7 +126,6 @@
   overflow-x: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  z-index: 1;
 
   &::-webkit-scrollbar {
     display: none;
